@@ -208,6 +208,24 @@ def test_issue_44_v0_4_3():
     b = Fxp(2**64+6, False, 64, 0, overflow='wrap', scaling=2, bias=8)
     assert b() == 2**64+6
 
+def test_issue_48_v0_4_8():
+    """
+    https://github.com/francof2a/fxpmath/issues/48
+    Flags not propagated
+    """
+    a = Fxp(-2., dtype="fxp-s24/8")
+    b = Fxp(2.15, dtype="fxp-s24/8")
+    assert b.status['inaccuracy']
+
+    # inaccuracy in b must be propagated to c
+    c = a + b
+    assert c.status['inaccuracy']
+
+    # add extra test using a inaccurate Fxp to set a new Fxp
+    d = Fxp(c)
+    assert d.status['inaccuracy']
+
+
 def test_issue_53_v0_4_5():
     x = Fxp(2j, dtype = 'fxp-u4/0-complex')
     z = x/2
