@@ -1,6 +1,7 @@
 version 0.4.9
 --------------------------------------------------
 * Fix wrap fuction over n_word_max (issue #41).
+* Inaccuracy flag is propagated to a new Fxp or resulting Fxp if one or more input Fxp are inaccurate (issue #48).
 
 version 0.4.8
 --------------------------------------------------
